Initial commit: Complete AgriTrust Web, Mobile App & Backend Platform